# EECS-349-Project

DDP/: CMakeLists.txt
DDP/src/: CMakeLists.txt  quadrotor_ddp.cpp
DDP/src/headers/: boxQP.hpp  ddp.hpp  liegroup.hpp  quadrotor.hpp  simulator.hpp  type.hpp
Neuro_Networks/: nn_quadrotor.py
Reinforcement_Learning/models/: quadrotor_2D.py  quadrotor_simple.py
Reinforcement_Learning/tf_rl/controller/: discrete_deepq.py
Reinforcement_Learning/tf_rl/simulation/: double_pendulum.py  point.py  quadrotor.py  quadrotor_simple.py
